replace unnecessary types (records) by String
Signed-off-by: benrejebmoh <mohamed.ben-rejeb@rte-france.com>